# garagem_3info1

./: db.sqlite3  pyproject.toml  requirements.txt
app/: settings.py  urls.py
core/: admin.py  models.py
core/migrations/: 0001_initial.py  0002_acessorio.py  0003_categoria_alter_acessorio_options.py  0004_cor.py  0005_marca.py  0006_modelo.py  0007_veiculo.py  0008_alter_veiculo_cor_alter_veiculo_modelo.py  0009_alter_veiculo_cor_alter_veiculo_modelo.py
core/models/: __init__.py  acessorio.py  cor.py  marca.py  modelo.py  veiculo.py
core/serializers/: __init__.py  acessorio.py  modelo.py  veiculo.py
core/views/: __init__.py  acessorio.py  cor.py  marca.py  modelo.py  veiculo.py
livraria/: settings.py
scripts/: cria_api.py
